[package]
name = "cdda_save_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = "*"
cxx = "*"
zip = { version = "*", default-features = false, features = ["zstd"] }
walkdir = "*"

[build-dependencies]
cxx-build = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
